testsuite/tests/parsetree/locations_test.compilers.reference
Ptop_def
  [
    structure_item (//toplevel//[10,221+0]..[10,221+39])
      Pstr_modtype "S" (//toplevel//[10,221+12]..[10,221+13])
        module_type (//toplevel//[10,221+16]..[10,221+23])
          attribute "attr"
            [
              structure_item (//toplevel//[10,221+31]..[10,221+38])
                Pstr_eval
                expression (//toplevel//[10,221+31]..[10,221+38])
                  Pexp_ident "payload" (//toplevel//[10,221+31]..[10,221+38])
            ]
          Pmty_signature
          []
    structure_item (//toplevel//[12,262+0]..[12,262+37])
      Pstr_module
      "M" (//toplevel//[12,262+7]..[12,262+8])
        module_expr (//toplevel//[12,262+11]..[12,262+21])
          attribute "attr"
            [
              structure_item (//toplevel//[12,262+29]..[12,262+36])
                Pstr_eval
                expression (//toplevel//[12,262+29]..[12,262+36])
                  Pexp_ident "payload" (//toplevel//[12,262+29]..[12,262+36])
            ]
          Pmod_structure
          []
    structure_item (//toplevel//[14,301+0]..[14,301+29])
      Pstr_type Rec
      [
        type_declaration "t" (//toplevel//[14,301+5]..[14,301+6]) (//toplevel//[14,301+0]..[14,301+29])
          ptype_params =
            []
          ptype_cstrs =
            []
          ptype_kind =
            Ptype_abstract
          ptype_private = Public
          ptype_manifest =
            Some
              core_type (//toplevel//[14,301+10]..[14,301+13])
                attribute "attr"
                  [
                    structure_item (//toplevel//[14,301+20]..[14,301+27])
                      Pstr_eval
                      expression (//toplevel//[14,301+20]..[14,301+27])
                        Pexp_ident "payload" (//toplevel//[14,301+20]..[14,301+27])
                  ]
                Ptyp_constr "int" (//toplevel//[14,301+10]..[14,301+13])
                []
          ptype_jkind_annotation =
            None
      ]
  ]

module type S = sig end
module M : sig end
type t = int
Line 4, characters 0-9:
4 | exception Exn [@@attr payload]
    ^^^^^^^^^
Error: Syntax error
Ptop_def
  [
    structure_item (//toplevel//[4,25+0]..[4,25+6])
      Pstr_eval
      expression (//toplevel//[4,25+0]..[4,25+6])
        Pexp_apply
        expression (//toplevel//[4,25+0]..[4,25+6]) ghost
          Pexp_ident ".@()" (//toplevel//[4,25+0]..[4,25+6]) ghost
        [
          <arg>
          Nolabel
            expression (//toplevel//[4,25+0]..[4,25+1])
              Pexp_ident "x" (//toplevel//[4,25+0]..[4,25+1])
          <arg>
          Nolabel
            expression (//toplevel//[4,25+4]..[4,25+5])
              Pexp_constant PConst_int (4,None)
        ]
  ]

Line 4, characters 0-6:
4 | x.@(4);;
    ^^^^^^
Error: Unbound value "(.@())"
Ptop_def
  [
    structure_item (//toplevel//[2,1+0]..[2,1+11])
      Pstr_eval
      expression (//toplevel//[2,1+0]..[2,1+11])
        Pexp_apply
        expression (//toplevel//[2,1+0]..[2,1+11]) ghost
          Pexp_ident ".@()<-" (//toplevel//[2,1+0]..[2,1+11]) ghost
        [
          <arg>
          Nolabel
            expression (//toplevel//[2,1+0]..[2,1+1])
              Pexp_ident "x" (//toplevel//[2,1+0]..[2,1+1])
          <arg>
          Nolabel
            expression (//toplevel//[2,1+4]..[2,1+5])
              Pexp_constant PConst_int (4,None)
          <arg>
          Nolabel
            expression (//toplevel//[2,1+10]..[2,1+11])
              Pexp_constant PConst_int (4,None)
        ]
  ]

Line 2, characters 0-11:
2 | x.@(4) <- 4;;
    ^^^^^^^^^^^
Error: Unbound value "(.@()<-)"
Ptop_def
  [
    structure_item (//toplevel//[2,1+0]..[2,1+7])
      Pstr_eval
      expression (//toplevel//[2,1+0]..[2,1+7])
        Pexp_apply
        expression (//toplevel//[2,1+0]..[2,1+7]) ghost
          Pexp_ident ".%.{}" (//toplevel//[2,1+0]..[2,1+7]) ghost
        [
          <arg>
          Nolabel
            expression (//toplevel//[2,1+0]..[2,1+1])
              Pexp_ident "x" (//toplevel//[2,1+0]..[2,1+1])
          <arg>
          Nolabel
            expression (//toplevel//[2,1+5]..[2,1+6])
              Pexp_constant PConst_int (4,None)
        ]
  ]

Line 2, characters 0-7:
2 | x.%.{4};;
    ^^^^^^^
Error: Unbound value "(.%.{})"
Ptop_def
  [
    structure_item (//toplevel//[2,1+0]..[2,1+12])
      Pstr_eval
      expression (//toplevel//[2,1+0]..[2,1+12])
        Pexp_apply
        expression (//toplevel//[2,1+0]..[2,1+12]) ghost
          Pexp_ident ".%.{}<-" (//toplevel//[2,1+0]..[2,1+12]) ghost
        [
          <arg>
          Nolabel
            expression (//toplevel//[2,1+0]..[2,1+1])
              Pexp_ident "x" (//toplevel//[2,1+0]..[2,1+1])
          <arg>
          Nolabel
            expression (//toplevel//[2,1+5]..[2,1+6])
              Pexp_constant PConst_int (4,None)
          <arg>
          Nolabel
            expression (//toplevel//[2,1+11]..[2,1+12])
              Pexp_constant PConst_int (4,None)
        ]
  ]

Line 2, characters 0-12:
2 | x.%.{4} <- 4;;
    ^^^^^^^^^^^^
Error: Unbound value "(.%.{}<-)"
Ptop_def
  [
    structure_item (//toplevel//[2,1+0]..[2,1+7])
      Pstr_eval
      expression (//toplevel//[2,1+0]..[2,1+7])
        Pexp_apply
        expression (//toplevel//[2,1+0]..[2,1+7]) ghost
          Pexp_ident ".%.[]" (//toplevel//[2,1+0]..[2,1+7]) ghost
        [
          <arg>
          Nolabel
            expression (//toplevel//[2,1+0]..[2,1+1])
              Pexp_ident "x" (//toplevel//[2,1+0]..[2,1+1])
          <arg>
          Nolabel
            expression (//toplevel//[2,1+5]..[2,1+6])
              Pexp_constant PConst_int (4,None)
        ]
  ]

Line 2, characters 0-7:
2 | x.%.[4];;
    ^^^^^^^
Error: Unbound value "(.%.[])"
Line 6, characters 0-3:
6 | let f = function (module M : S) -> ()
    ^^^
Error: Syntax error
Line 14, characters 0-3:
14 | let g y =
     ^^^
Error: Syntax error


Line 4, characters 0-3:
4 | let a : type a b c. unit = ()
    ^^^
Error: Syntax error

